--- a/view/fase-de-grupo.html
+++ b/view/fase-de-grupo.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 
+    <!-- Header - Start-->
     <header>
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid px-5">
@@ -34,16 +35,13 @@
                             <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Calendario</a>
+                            <a class="nav-link text-white" href="./calendario.html">Calendario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Notícias</a>
+                            <a class="nav-link text-white" href="./noticias.html">Notícias</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./resultado.html">Resultados</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="./teste.html">Teste</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,7 +49,6 @@
                             </a>
                             <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item text-white" href="./fase-de-grupo.html">Fase de Grupo</a></li>
-                            <li><a class="dropdown-item text-white" href="./fase-final.html">Fase Final</a></li>
                             <li><a class="dropdown-item text-white" href="./ranking.html">Ranking</a></li>
                             </ul>
                         </li>
@@ -61,6 +58,7 @@
             </div>
         </nav>    
     </header>
+    <!-- Header - End-->
 
     <main>
         <div class="container">
