--- a/view/noticias.html
+++ b/view/noticias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Raff Cup | Resultados</title>
+    <title>World Raff Cup | Noticias</title>
     <!-- Styles -->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -34,16 +34,13 @@
                             <a class="nav-link active text-white" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Calendario</a>
+                            <a class="nav-link text-white" href="./calendario.html">Calendario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../view/noticias.html">Notícias</a>
+                            <a class="nav-link text-white" href="./noticias.html">Notícias</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="./resultado.html">Resultados</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" href="./teste.html">Teste</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,7 +48,6 @@
                             </a>
                             <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item text-white" href="./fase-de-grupo.html">Fase de Grupo</a></li>
-                            <li><a class="dropdown-item text-white" href="./fase-final.html">Fase Final</a></li>
                             <li><a class="dropdown-item text-white" href="./ranking.html">Ranking</a></li>
                             </ul>
                         </li>
@@ -100,7 +96,7 @@
                                         <div class="col-md-8">
                                             <div class="card-body">
                                             <a href="#" style="text-decoration: none;"><h4 class="card-title text-primary">Titulo Noticia</h4></a>
-                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <p class="card-text"><small>Last updated 3 mins ago</small></p>
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <a href="" class="btn btn-primary">Ler mais</a>
                                             
@@ -120,7 +116,7 @@
                                         <div class="col-md-8">
                                             <div class="card-body">
                                             <a href="#" style="text-decoration: none;"><h4 class="card-title text-primary">Titulo Noticia</h4></a>
-                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <p class="card-text"><small>Last updated 3 mins ago</small></p>
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <a href="" class="btn btn-primary">Ler mais</a>
                                             
@@ -140,7 +136,7 @@
                                         <div class="col-md-8">
                                             <div class="card-body">
                                             <a href="#" style="text-decoration: none;"><h4 class="card-title text-primary">Titulo Noticia</h4></a>
-                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <p class="card-text"><small>Last updated 3 mins ago</small></p>
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <a href="" class="btn btn-primary">Ler mais</a>
                                             
@@ -160,7 +156,7 @@
                                         <div class="col-md-8">
                                             <div class="card-body">
                                             <a href="#" style="text-decoration: none;"><h4 class="card-title text-primary">Titulo Noticia</h4></a>
-                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <p class="card-text"><small>Last updated 3 mins ago</small></p>
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <a href="" class="btn btn-primary">Ler mais</a>
                                             
@@ -180,7 +176,7 @@
                                         <div class="col-md-8">
                                             <div class="card-body">
                                             <a href="#" style="text-decoration: none;"><h4 class="card-title text-primary">Titulo Noticia</h4></a>
-                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <p class="card-text"><small>Last updated 3 mins ago</small></p>
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <a href="" class="btn btn-primary">Ler mais</a>
                                             
