--- a/view/index.html
+++ b/view/index.html
@@ -129,7 +129,7 @@
                             <div class="nms-info my-3 "> 
                                 <p class="font-14 m-0">21 Nov, 2022 | 07:00 AM GMT-3</p>
                                 <p class="font-14 mb-3"><a href="#" class="font-14 text-primary" style="text-decoration: none;">Al Thumama Stadium</a>, Al Thumama</p>
-                                <a href="#" class="btn btn-primary">Ver Calendario</a> 
+                                <a href="./calendario.html" class="btn btn-primary">Ver Calendario</a> 
                             </div>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
                     <div class="col-md-7">
                         <h3 class="fs-2 m-5 ms-3 text-primary">Ranking dos melhores times</h3>
                         <p class="text-light ms-5 me-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae dolorem magni natus ad earum aspernatur cupiditate nobis ab, vero aliquid repudiandae at. Doloremque cupiditate id dolorum, quia quas explicabo! Consequatur, vero. Fugit officia iure, pariatur rem optio quidem delectus, voluptatem doloribus, ad fuga voluptas! Perspiciatis dolore beatae odit neque delectus.</p>
-                        <a href="#" class="btn btn-dark ms-5 me-4 mt-4">Ver Tabela Completa</a>
+                        <a href="./ranking.html" class="btn btn-dark ms-5 me-4 mt-4">Ver Tabela Completa</a>
                     </div>
                     <div class="col-md-5 my-5">
                         <div class="table-responsive">
