--- a/view/calendario.html
+++ b/view/calendario.html
@@ -68,17 +68,17 @@
                 <!-- Date - Start -->
                 <div class="row px-4 mb-2">
                     <div class="col-md-12 bg-primary px-4 text-light rounded-top">
-                        <h4 class="mb-0 py-2">24 May, 2020 | <span class="font-16">WORLD CUP</span></h4>
+                        <h4 class="mb-0 py-2">20 Nov, 2022 | <span class="font-16">WORLD CUP</span></h4>
                     </div>
                 </div>
                 <!-- Day - Start-->
                 <div class="row px-4 my-2">
                     <div class="col-md-12 rounded-2 rounded-bottom border-bottom">
-                        <div class="row bg-dark pt-5 text-light">
-                            <div class="col-sm-4 d-flex justify-content-center text-center">
+                        <div class="row bg-dark pt-5 text-light d-flex justify-content-center">
+                            <div class="col-sm-4 text-center">
                                 <div class="my-2"> <strong>Senegal</strong> <img src="../content/images/countries/Senegal.png" alt=""> </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="nms-info mt-3"> 
                                   <strong class="px-3 py-1 border border-opacity-50 rounded-4 bg-secondary bg-opacity-10 text-primary font-12">
                                       VS
@@ -88,15 +88,15 @@
                                   <p class="mb-2 font-12 text-primary">Rodada 1</p>
                                 </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="my-2"><img src="../content/images/countries/Holanda.png" alt=""> <strong>Holanda</strong> </div>
                               </div>
                               <div class="row">
-                                <div class="col-md-12 d-flex justify-content-center text-center">
+                                <div class="col-md-12 text-center">
                                     <div class="nms-info my-3 "> 
                                         <p class="font-14 m-0">21 Nov, 2022 | 07:00 AM GMT-3</p>
                                         <p class="font-14 mb-3"><a href="#" class="font-14 text-primary" style="text-decoration: none;">Al Thumama Stadium</a>, Al Thumama</p>
-                                        <a href="#" class="btn btn-primary">Ver Calendario</a> 
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -107,11 +107,11 @@
 
                 <div class="row px-4 my-2">
                     <div class="col-md-12 rounded-2 rounded-bottom border-bottom">
-                        <div class="row bg-dark pt-5 text-light">
-                            <div class="col-sm-4 d-flex justify-content-center text-center">
+                        <div class="row bg-dark pt-5 text-light d-flex justify-content-center">
+                            <div class="col-sm-4 text-center">
                                 <div class="my-2"> <strong>Senegal</strong> <img src="../content/images/countries/Senegal.png" alt=""> </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="nms-info mt-3"> 
                                   <strong class="px-3 py-1 border border-opacity-50 rounded-4 bg-secondary bg-opacity-10 text-primary font-12">
                                       VS
@@ -121,15 +121,15 @@
                                   <p class="mb-2 font-12 text-primary">Rodada 1</p>
                                 </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="my-2"><img src="../content/images/countries/Holanda.png" alt=""> <strong>Holanda</strong> </div>
                               </div>
                               <div class="row">
-                                <div class="col-md-12 d-flex justify-content-center text-center">
+                                <div class="col-md-12 text-center">
                                     <div class="nms-info my-3 "> 
                                         <p class="font-14 m-0">21 Nov, 2022 | 07:00 AM GMT-3</p>
                                         <p class="font-14 mb-3"><a href="#" class="font-14 text-primary" style="text-decoration: none;">Al Thumama Stadium</a>, Al Thumama</p>
-                                        <a href="#" class="btn btn-primary">Ver Calendario</a> 
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -140,11 +140,11 @@
 
                 <div class="row px-4 my-2">
                     <div class="col-md-12 rounded-2 rounded-bottom border-bottom">
-                        <div class="row bg-dark pt-5 text-light">
-                            <div class="col-sm-4 d-flex justify-content-center text-center">
+                        <div class="row bg-dark pt-5 text-light d-flex justify-content-center">
+                            <div class="col-sm-4 text-center">
                                 <div class="my-2"> <strong>Senegal</strong> <img src="../content/images/countries/Senegal.png" alt=""> </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="nms-info mt-3"> 
                                   <strong class="px-3 py-1 border border-opacity-50 rounded-4 bg-secondary bg-opacity-10 text-primary font-12">
                                       VS
@@ -154,15 +154,15 @@
                                   <p class="mb-2 font-12 text-primary">Rodada 1</p>
                                 </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="my-2"><img src="../content/images/countries/Holanda.png" alt=""> <strong>Holanda</strong> </div>
                               </div>
                               <div class="row">
-                                <div class="col-md-12 d-flex justify-content-center text-center">
+                                <div class="col-md-12 text-center">
                                     <div class="nms-info my-3 "> 
                                         <p class="font-14 m-0">21 Nov, 2022 | 07:00 AM GMT-3</p>
                                         <p class="font-14 mb-3"><a href="#" class="font-14 text-primary" style="text-decoration: none;">Al Thumama Stadium</a>, Al Thumama</p>
-                                        <a href="#" class="btn btn-primary">Ver Calendario</a> 
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -171,19 +171,19 @@
                     </div>
                 </div>
 
-                <div class="row px-4 mb-2">
+                <div class="row px-4 mb-2 mt-4">
                     <div class="col-md-12 bg-primary px-4 text-light rounded-top">
-                        <h4 class="mb-0 py-2">24 May, 2020 | <span class="font-16">WORLD CUP</span></h4>
+                        <h4 class="mb-0 py-2">20 Nov, 2022 | <span class="font-16">WORLD CUP</span></h4>
                     </div>
                 </div>
                 <!-- Day - Start-->
                 <div class="row px-4 my-2">
                     <div class="col-md-12 rounded-2 rounded-bottom border-bottom">
-                        <div class="row bg-dark pt-5 text-light">
-                            <div class="col-sm-4 d-flex justify-content-center text-center">
+                        <div class="row bg-dark pt-5 text-light d-flex justify-content-center">
+                            <div class="col-sm-4 text-center">
                                 <div class="my-2"> <strong>Senegal</strong> <img src="../content/images/countries/Senegal.png" alt=""> </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="nms-info mt-3"> 
                                   <strong class="px-3 py-1 border border-opacity-50 rounded-4 bg-secondary bg-opacity-10 text-primary font-12">
                                       VS
@@ -193,15 +193,15 @@
                                   <p class="mb-2 font-12 text-primary">Rodada 1</p>
                                 </div>
                               </div>
-                              <div class="col-sm-4 d-flex justify-content-center text-center">
+                              <div class="col-sm-4 text-center">
                                 <div class="my-2"><img src="../content/images/countries/Holanda.png" alt=""> <strong>Holanda</strong> </div>
                               </div>
                               <div class="row">
-                                <div class="col-md-12 d-flex justify-content-center text-center">
+                                <div class="col-md-12 text-center">
                                     <div class="nms-info my-3 "> 
                                         <p class="font-14 m-0">21 Nov, 2022 | 07:00 AM GMT-3</p>
                                         <p class="font-14 mb-3"><a href="#" class="font-14 text-primary" style="text-decoration: none;">Al Thumama Stadium</a>, Al Thumama</p>
-                                        <a href="#" class="btn btn-primary">Ver Calendario</a> 
+                                        
                                     </div>
                                 </div>
                             </div>
